--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/sombrero.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>React Starter Kit</title>
+    <title>Rosa Donoso Requena</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
